--- a/other/wicd.desktop
+++ b/other/wicd.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Categories=Application;Network;
+Categories=Network;Settings;Utility;X-GNOME-NetworkSettings;
 Exec=wicd-gtk --no-tray
 GenericName=Network Manager
 Icon=wicd-gtk
