Moved from generated init files to static.
Let the maintainers do their choices, instead of jump into ideas about
how init files should looks like.

Adjusted gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
-.git
-wicd.egg-info/
-*.bak
-**/*.pyc
+__pycache__/
+*.py[cod]
+
+build/
+dist/
+sdist/
+*.egg-info/
+MANIFEST
+
 .venv/
-.vscode/
-.bzr/
-experimental.wpr
 install.log
 uninstall.log
-.bzrignore
-vcsinfo.py
-build
-build/*
-init/*/*
-wpath.py*
 man/wicd-curses.8
 man/wicd-manager-settings.conf.5
 man/wicd-wired-settings.conf.5
@@ -29,8 +25,4 @@ scripts/wicd
 scripts/wicd-client
 scripts/wicd-curses
 translations/*
-wicd/wpath.py
 *tags
-dist/
-MANIFEST
-debian/
