Removed kde/gtk/gnome stuff from setup
Also removed placement of the modules for daemon, cli and curses client,
since they are part of the wicd package now.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,18 @@
+
+[options]
+packages =
+    wicd
+    wicd/curses
+    wicd/backends
+
+[options.entry_points]
+console_scripts =
+    wicd=wicd.wicd_daemon:main
+    wicd-cli=wicd.wicd_cli:main
+    wicd-curses=wicd.curses.wicd_curses:main
+
 [install]
 record = install.log
+
 [bdist_rpm]
 group = Productivity/Networking/System
