Fix up paths, take adventage of data path

--- a/data/dbus/wicd.conf
+++ b/data/dbus/wicd.conf
@@ -18,7 +18,7 @@
         </policy>
 
 	<!-- This Unix group will have permission to use Wicd's gui -->
-        <policy group="%WICDGROUP%">
+        <policy group="users">
                 <allow send_destination="org.wicd.daemon"/>
                 <allow send_interface="org.wicd.daemon"/>
                 <allow send_interface="org.freedesktop.DBus.Introspectable"/>
@@ -29,7 +29,7 @@
 
        <!-- Comment the block below if you do not want all users logged in 
             locally to have permission to use wicd-client.  This ignores the 
-            group based permission model defined above for the "%WICDGROUP%"
+            group based permission model defined above for the "users"
             group. Note that this only applies if you are using ConsoleKit -
             if you do not have ConsoleKit installed and in use, then this
             block makes no difference either way.  -->
