Added entry points for autoconnect and suspend.
Moved scripts to data directory.

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ console_scripts =
     wicd=wicd.wicd_daemon:main
     wicd-cli=wicd.wicd_cli:main
     wicd-curses=wicd.curses.wicd_curses:main
+    wicd-autoconnect=wicd.autoconnect:main
+    wicd-suspend=wicd.suspend:main
 
 [install]
 record = install.log
