Added required external dependecies

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,11 @@ packages =
     wicd
     wicd/curses
     wicd/backends
+install_requires =
+    dbus-python
+    urwid
+    pybabel
+    PyGObject
 
 [options.entry_points]
 console_scripts =
